2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* python_to_octave.cc (pydict_to_octmap): Save key and val in an
	array, to avoid doing duplicate conversions.

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* pytave.cc (init): Add parameter; only display Octave banner if
	requested.
	* package/pytave.cc: Determine whether the interpreter is
	interactive.

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* octave_to_python.cc (is_1xn_or_0x0): New inline func.
	(octcell_to_pyobject): Use it.
	(octvalue_to_pyobj): Use it.
	* test/test.py: Update & fix tests.

2009-05-13  Jaroslav Hajek  <highegg@gmail.com>

	* exceptions.h (variable_name_exception): New exception class.
	* exceptions.cc: Initialize it.
	* octave_to_python.h (octvalue_to_pyobj): Declare prototype.
	* pytave.cc (init): Init variable_name_exception.
	(getvar): New function.
	(setvar): New function.
	(isvar): New function.
	(push_scope): New function.
	(pop_scope): New function.
	* package/pytave.py (__init__): Init VarNameError.
	(getvar): New function.
	(setvar): New function.
	(isvar): New function.
	(push_scope): New function.
	(pop_scope): New function.
	(_local_scope): New decorator helper class.
	(local_scope): New decorator.
	* test/test.py: Include new tests.

2009-05-09  David Grundberg  <individ@acc.umu.se>

	* ax_octave_float.m4: New file.
	* configure.ac: Added --enable-float-matrices configure option.

2009-05-07  Jaroslav Hajek  <highegg@gmail.com>

	* exceptions.h (octave_parse_exception): New class.
	* package/pytave.py: Added ParseError exception.
	(eval): New function.
	* pytave.cc (func_eval, make_error_message): Extracted
	make_error_message from func_eval.
	(str_eval): New function.

2009-05-05  David Grundberg  <individ@acc.umu.se>

	* python_to_octave.cc (pydict_to_octmap): Improved semantics and
	error control.
	* m4/ax_octave.m4, m4/ax_python_devel.m4: New files.
	* m4/ax_python.m4: Removed.
	* m4/ax_boost_python.m4, README, INSTALL: Rewritten.